[package]
name = "rustbridge"
version = "0.1.0"
authors = ["erichall <hallstrom.eric@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde_derive = "1.0.27"
serde = "1.0"
comrak = "0.2.8"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
