[package]
name = "rustbridge"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>",
           "erichall <hallstrom.eric@gmail.com>",
           "rupsis <nrupsis@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
comrak = "0.2.8"
serde_derive = "1.0.27"
serde = "1.0"

diesel = { version = "1.0.0", features = ["postgres"] }

failure = "0.1.1"
failure_derive = "0.1.1"

data-encoding = "2.1.1"
ring = "0.11.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
